k8s/manifests/dev/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: penlight
spec:
  replicas: 1
  selector:
    matchLabels:
      app: penlight
  template:
    metadata:
      labels:
        app: penlight
    spec:
      imagePullSecrets:
        - name: gcr-pull-secret
      containers:
        - name: penlight
          image: gcr.io/my-docker-471807/penlight/prod-view-penlight:dev-ac42db3d
          volumeMounts:
            - name: gcp-sa-volume
              mountPath: /app/secret
              readOnly: true
          ports:
            - containerPort: 3000
      volumes:
        - name: gcp-sa-volume
          secret:
            secretName: gcp-sa-key
