k8s/manifests/dev/service.yml
apiVersion: v1
kind: Service
metadata:
  name: penlight
spec:
  selector:
    app: penlight
  ports:
    - port: 80
      targetPort: 3000
